Fix T78529: Blend file corrupted during save caused by high Cubemap Size

This just avoid the corruption. A better fix still need to be finished.

See P1564